--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ a:hover{
     text-decoration: underline;
 }
 
+
 /* Banner */
 
 #banner{
@@ -52,6 +53,7 @@ a:hover{
     font-size: 24px;
 }
 
+
 /* Inputs */
 
 input,
@@ -67,6 +69,7 @@ input:focus,
 textarea:focus{
     outline: none;
 }
+
 
 /* Search box*/
 
@@ -84,6 +87,7 @@ textarea:focus{
     height: 48px;
     width: 100%;
 }
+
 
 /* Nav */
 
@@ -136,7 +140,7 @@ nav ul{
 
 #logo-img img{
     height: 68px;
-margin-top: 3px;
+    margin-top: 3px;
 }
 
 #logo-img:hover{
@@ -152,6 +156,7 @@ margin-top: 3px;
     align-items: center;
 }
 
+
 /* Search icon */
 
 #search-icon{
@@ -164,6 +169,7 @@ margin-top: 3px;
 #search-icon:hover{
     color: rgb(60, 60, 247)
 }
+
 
 /* Slideout menu */
 
@@ -203,6 +209,7 @@ margin-top: 3px;
     text-align: center;
 }
 
+
 /* Sections */
 
 section{
@@ -214,17 +221,18 @@ section{
 .section-heading{
     font-size: 32px;
     font-family: "Roboto Condensed", sans-serif;
-border-left: 3px solid black;
-border-right: 3px solid black;
-transition: all 0.4s;
-display: inline-block;
-padding: 4px 32px;
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+    transition: all 0.4s;
+    display: inline-block;
+    padding: 4px 32px;
 }
 
 .section-heading:hover{
     padding: 4px 45px;
     background: rgb(60, 60, 247);
 }
+
 
 /* Section Source */
 
@@ -253,16 +261,17 @@ padding: 4px 32px;
     padding: 0 8px;
 }
 
-.card-meta-blogpost{
+.card-neta-blogpost{
     color: #333;
     font-size: 14px;
     padding: 16px;
     font-family: "Roboto Slab", serif;
 }
 
-.card-meta-blogpost a{
+.card-neta-blogpost a{
     color: #333;
 }
+
 
 /* Footer */
 
@@ -328,7 +337,6 @@ color: #bbb;
 }
 
 
-
 /* Blog list page */
 
 .page-heading{
@@ -357,7 +365,6 @@ color: #bbb;
 .card-meta a{
     color: #333;
 }
-
 
 
 /* Pagination */
@@ -413,7 +420,15 @@ color: #bbb;
     box-shadow: inset 27px 0 51px -18px rgba(0, 0, 0, 0.75);
 }
 
-/* MEdia Queries */
+
+/* Comments section */
+
+#comments-section{
+    border-top: 2px solid #eee;
+    padding: 8px;
+}
+
+/* Media Queries */
 
 @media (max-width: 600px){
     main{
